--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -8,4 +8,4 @@ html(lang="en")
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js')
-    script(type='text/javascript', data-main="js/app", src="js/libs/require/require.js")
+    script(type='text/javascript', data-main="js/app", src="js/libs/require.js")
