--- a/app/css/sass/main.scss
+++ b/app/css/sass/main.scss
@@ -4,6 +4,7 @@
 body {
     background: #efefef;
     font-family: 'Helvetica Neue', sans-serif;
+    font-weight: 200;
     overflow: hidden;
     background: url("../../images/starslarge.jpg") top no-repeat;
 }
@@ -12,12 +13,41 @@ a {
     text-decoration: none;
 }
 
+h1 {
+    font-size: 2em;
+}
+
 header {
     width: 100%;
     top: 0;
     position: absolute;
-    height: 100px;
-    background-color: rgba(255, 255, 255, 0.4);
+    height: 70px;
+    background-color: #eee;
     display: block;
-    border-radius: 10px;
+    box-shadow: 0px 0px 30px rgba(255,255,255,0.2);
+    h1 {
+        margin: 15px;
+        color: #444;
+        float: left;
+    }
+    #searchbar {
+        margin: 15px;
+        float: right;
+        width: 250px;
+        background-color: rgba(150,150,150,0.9);
+        display: block;
+        height: 35px;
+        border-radius: 15px;
+        position: relative;
+        text-indent: 20px;
+        vertical-align: center;
+        color: #444;
+    }
+}
+
+#sidebar {
+    width: 300px;
+    height: 100vh;
+    display: block;
+    background-color: rgba(255, 255, 255, 0.2);
 }
