--- a/app/css/stylesheets/main.css
+++ b/app/css/stylesheets/main.css
@@ -67,22 +67,56 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 body {
   background: #efefef;
   font-family: 'Helvetica Neue', sans-serif;
+  font-weight: 200;
   overflow: hidden;
   background: url("../../images/starslarge.jpg") top no-repeat;
 }
 
-/* line 11, ../sass/main.scss */
+/* line 12, ../sass/main.scss */
 a {
   text-decoration: none;
 }
 
-/* line 15, ../sass/main.scss */
+/* line 16, ../sass/main.scss */
+h1 {
+  font-size: 2em;
+}
+
+/* line 20, ../sass/main.scss */
 header {
   width: 100%;
   top: 0;
   position: absolute;
-  height: 100px;
-  background-color: rgba(255, 255, 255, 0.4);
+  height: 70px;
+  background-color: #eee;
   display: block;
-  border-radius: 10px;
+  box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.2);
+}
+/* line 28, ../sass/main.scss */
+header h1 {
+  margin: 15px;
+  color: #444;
+  float: left;
+}
+/* line 33, ../sass/main.scss */
+header #searchbar {
+  margin: 15px;
+  float: right;
+  width: 250px;
+  background-color: rgba(150, 150, 150, 0.9);
+  display: block;
+  height: 35px;
+  border-radius: 15px;
+  position: relative;
+  text-indent: 20px;
+  vertical-align: center;
+  color: #444;
+}
+
+/* line 48, ../sass/main.scss */
+#sidebar {
+  width: 300px;
+  height: 100vh;
+  display: block;
+  background-color: rgba(255, 255, 255, 0.2);
 }
