--- a/app/views/templates.jade
+++ b/app/views/templates.jade
@@ -1,2 +1,24 @@
 script(type='text/template', id='eventTemplate').
-  <h1>Event</h1>
+    <h1>Event</h1>
+script(type='text/template', id='studentProfile').
+    <div id="profpic">
+        <img src="<%= photo_url %>", alt="<%= name %>">
+    </div>
+    <ul id="about">
+        <li><%= name %></li>
+        <li>Class of <%= year %></li>
+    </ul>
+    <h1>Your Clubs</h1>
+    <ul id="student-clubs"><%= clubs %><ul>
+    <a href="/clubs" alt="Browse All Clubs">Browse all clubs</a>
+script(type='text/template', id='clubProfile').
+    <div id="profpic">
+        <img src="<%= photo_url %>", alt="<%= name %>">
+    </div>
+    <ul id="about">
+        <li><%= name %></li>
+        <li><%= description %></li>
+    </ul>
+    <h1>Your Clubs</h1>
+    <ul id="student-clubs"><%= clubs %><ul>
+    <a href="/clubs" alt="Browse All Clubs">Browse all clubs</a>
