--- a/app/css/sass/_feed.scss
+++ b/app/css/sass/_feed.scss
@@ -6,6 +6,6 @@ ul {
         padding: 10px;
         width: 90%;
         margin: 0 auto;
-        margin-top: 10px;
+        margin-top: 2%;
     }
 }
