--- a/app/css/sass/main.scss
+++ b/app/css/sass/main.scss
@@ -27,16 +27,18 @@ header {
     height: 70px;
     background-color: #eee;
     display: block;
-    box-shadow: 0px 0px 30px rgba(255,255,255,0.2);
+    box-shadow: 0px 0px 30px rgba(255,255,255,0.4);
     h1 {
         margin: 15px;
         color: #444;
         float: left;
+        margin-left: 2.5%;
     }
     #searchbar {
         @include transition(border, box-shadow 0.3s ease-in-out);
         border: 2px solid transparent;
         margin: 15px;
+        margin-right: 2.5%;
         float: right;
         width: 250px;
         background-color: rgba(150,150,150,0.9);
