--- a/app/css/sass/_feed.scss
+++ b/app/css/sass/_feed.scss
@@ -1,5 +1,6 @@
 ul {
     margin-top: 70px;
+    padding: 5px 0;
     margin-left: 400px;
     li {
         background-color: rgba(255,255,255,0.7);
