--- a/app/css/sass/_feed.scss
+++ b/app/css/sass/_feed.scss
@@ -8,5 +8,10 @@ ul {
         width: 90%;
         margin: 0 auto;
         margin-top: 2%;
+        span {
+            display: block;
+            width: 100%;
+            position: relative;
+        }
     }
 }
