--- a/app/css/stylesheets/main.css
+++ b/app/css/stylesheets/main.css
@@ -94,6 +94,12 @@ ul li {
   margin: 0 auto;
   margin-top: 2%;
 }
+/* line 11, ../sass/_feed.scss */
+ul li span {
+  display: block;
+  width: 100%;
+  position: relative;
+}
 
 /* line 6, ../sass/main.scss */
 body {
