--- a/app/views/templates.jade
+++ b/app/views/templates.jade
@@ -1,10 +1,14 @@
 script(type='text/template', id='eventTemplate').
     <div class="<% if (isEvent) {event}  %>announcement">
-    <%= name %>
+    <span><%= name %></span>
+    <span class="club">Hosted By: <%= club %></span>
+    <span class="time">On: <%= date %> at <%= moment(start_time) %></span>
     <% _.each(photos, function(photo){ %>
-        <img src="<%= _.escape(photo) %>">
+        <span><img src="<%= _.escape(photo) %>"></span>
     <% }); %>
-    <p><%= description %></p>
+    <span><%= description %></span>
+    <span></span>
+    <% if (freeFood) { %> <div class="freefood"></div> <% } %>
 script(type='text/template', id='studentProfile').
     <div id="profpic">
         <img src="<%= photo_url %>", alt="<%= name %>">
