--- a/app/css/sass/main.scss
+++ b/app/css/sass/main.scss
@@ -28,6 +28,7 @@ header {
     background-color: #eee;
     display: block;
     box-shadow: 0px 0px 30px rgba(255,255,255,0.4);
+    z-index: 10;
     h1 {
         margin: 15px;
         color: #444;
