--- a/app/css/stylesheets/main.css
+++ b/app/css/stylesheets/main.css
@@ -99,6 +99,13 @@ ul li span {
   display: block;
   width: 100%;
   position: relative;
+  margin: 10px;
+}
+/* line 17, ../sass/_feed.scss */
+ul li .event-name {
+  font-weight: 400;
+  line-height: 1.7em;
+  border-bottom: 1px solid black;
 }
 
 /* line 6, ../sass/main.scss */
@@ -130,15 +137,16 @@ header {
   background-color: #eee;
   display: block;
   box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.4);
+  z-index: 10;
 }
-/* line 31, ../sass/main.scss */
+/* line 32, ../sass/main.scss */
 header h1 {
   margin: 15px;
   color: #444;
   float: left;
   margin-left: 2.5%;
 }
-/* line 37, ../sass/main.scss */
+/* line 38, ../sass/main.scss */
 header #searchbar {
   -moz-transition: border, box-shadow 0.3s ease-in-out;
   -o-transition: border, box-shadow 0.3s ease-in-out;
@@ -160,7 +168,7 @@ header #searchbar {
   line-height: 2.1em;
   outline: none;
 }
-/* line 54, ../sass/main.scss */
+/* line 55, ../sass/main.scss */
 header #searchbar:focus {
   border: 2px solid #7572b6;
   box-shadow: 0 0 0.4em #7572b6;
