updated the modal request

--- a/app/views/eventform.jade
+++ b/app/views/eventform.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title Create New Event
+    link(rel='stylesheet', href='css/stylesheets/main.css')
   body
     section#new-event
       h3 Tell us about your event!
