--- a/app/views/templates.jade
+++ b/app/views/templates.jade
@@ -33,3 +33,7 @@ script(type='text/template', id='clubProfile').
     <h1>Your Clubs</h1>
     <ul id="student-clubs"><%= clubs %><ul>
     <a href="/clubs" alt="Browse All Clubs">Browse all clubs</a>
+script(type='text/template', id='modalTemplate').
+    <div id="modal"> 
+        <div id="modal-content"><%= data %></div>
+    </div>
