--- a/app/css/sass/main.scss
+++ b/app/css/sass/main.scss
@@ -58,3 +58,14 @@ header {
         }
     }
 }
+
+#modal {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.5);
+    z-index: 99;
+    #modal-content {
+        width: 300px;
+        height: 300px;
+    }
+}
