--- a/app/css/stylesheets/main.css
+++ b/app/css/stylesheets/main.css
@@ -173,3 +173,16 @@ header #searchbar:focus {
   border: 2px solid #7572b6;
   box-shadow: 0 0 0.4em #7572b6;
 }
+
+/* line 62, ../sass/main.scss */
+#modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 99;
+}
+/* line 67, ../sass/main.scss */
+#modal #modal-content {
+  width: 300px;
+  height: 300px;
+}
