--- a/app/css/sass/_sidebar.scss
+++ b/app/css/sass/_sidebar.scss
@@ -4,13 +4,15 @@
     height: 100vh;
     display: block;
     background-color: rgba(255, 255, 255, 0.2);
-}
 
-#profile {
-    #profpic {
-        padding: 10px;
-        height: 100px;
-        width: 100px;
-        background-color: red;
+    #profile {
+        #profpic {
+            padding: 10px;
+            height: 100px;
+            width: 100px;
+            background-color: red;
+            display: block;
+        }
     }
+
 }
