--- a/app/css/stylesheets/main.css
+++ b/app/css/stylesheets/main.css
@@ -71,13 +71,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
   background-color: rgba(255, 255, 255, 0.2);
 }
-
-/* line 10, ../sass/_sidebar.scss */
-#profile #profpic {
+/* line 9, ../sass/_sidebar.scss */
+#sidebar #profile #profpic {
   padding: 10px;
   height: 100px;
   width: 100px;
   background-color: red;
+  display: block;
 }
 
 /* line 1, ../sass/_feed.scss */
@@ -108,7 +108,7 @@ ul li .event-name {
   border-bottom: 1px solid black;
 }
 
-/* line 6, ../sass/main.scss */
+/* line 7, ../sass/main.scss */
 body {
   background: #efefef;
   font-family: 'Helvetica Neue', sans-serif;
@@ -118,17 +118,17 @@ body {
   background-attachment: fixed;
 }
 
-/* line 15, ../sass/main.scss */
+/* line 16, ../sass/main.scss */
 a {
   text-decoration: none;
 }
 
-/* line 19, ../sass/main.scss */
+/* line 20, ../sass/main.scss */
 h1 {
   font-size: 2em;
 }
 
-/* line 23, ../sass/main.scss */
+/* line 24, ../sass/main.scss */
 header {
   width: 100%;
   top: 0;
@@ -139,14 +139,14 @@ header {
   box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.4);
   z-index: 10;
 }
-/* line 32, ../sass/main.scss */
+/* line 33, ../sass/main.scss */
 header h1 {
   margin: 15px;
   color: #444;
   float: left;
   margin-left: 2.5%;
 }
-/* line 38, ../sass/main.scss */
+/* line 39, ../sass/main.scss */
 header #searchbar {
   -moz-transition: border, box-shadow 0.3s ease-in-out;
   -o-transition: border, box-shadow 0.3s ease-in-out;
@@ -168,20 +168,20 @@ header #searchbar {
   line-height: 2.1em;
   outline: none;
 }
-/* line 55, ../sass/main.scss */
+/* line 56, ../sass/main.scss */
 header #searchbar:focus {
   border: 2px solid #7572b6;
   box-shadow: 0 0 0.4em #7572b6;
 }
 
-/* line 62, ../sass/main.scss */
+/* line 63, ../sass/main.scss */
 #modal {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.5);
   z-index: 99;
 }
-/* line 67, ../sass/main.scss */
+/* line 68, ../sass/main.scss */
 #modal #modal-content {
   width: 300px;
   height: 300px;
