profile pic style

--- a/app/css/sass/_sidebar.scss
+++ b/app/css/sass/_sidebar.scss
@@ -8,10 +8,8 @@
     #profile {
         #profpic {
             padding: 10px;
-            height: 100px;
-            width: 100px;
-            background-color: red;
             display: block;
+            border-radius: 50%;
         }
     }
 
