--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -9,6 +9,7 @@ html(lang="en")
         div#searchbar(contenteditable="true") Search
     div#sidebar
         div#profile
+            img#profpic(src='../images/profile-picture.jpg')
         div#calendar
     ul#feed
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
