--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -5,7 +5,8 @@ html(lang="en")
     link(rel='stylesheet', href='css/stylesheets/main.css')
   body
     header
-        h1 Tufts Clubs
+        a(href='/') 
+            h1 Tufts Clubs
         div#searchbar(contenteditable="true") Search
     div#sidebar
         div#profile
