--- a/app/css/sass/main.scss
+++ b/app/css/sass/main.scss
@@ -70,3 +70,12 @@ header {
         height: 300px;
     }
 }
+
+#new-event {
+    background-color: rgba(255,255,255,0.4);
+    margin: 0 auto;
+    margin-top: 100px;
+    padding: 30px;
+    border-radius: 10px;
+    width: 60%;
+}
