--- a/app/css/sass/_sidebar.scss
+++ b/app/css/sass/_sidebar.scss
@@ -6,7 +6,9 @@
     background-color: rgba(255, 255, 255, 0.2);
 
     #profile {
+        position: relative;
         #profpic {
+            float: left;
             margin: 30px;
             width: 150px;
             height: 150px;
@@ -16,6 +18,33 @@
             @include transition(border 0.3s ease-in-out);
             &:hover {
                 border: 1px solid hsla(243, 32%, 58%, 1.0);
+            }
+        }
+        #about {
+            float: left;
+            font-size: 1.3em;
+            line-height: 1.6em;
+            color: #fff;
+            font-weight: 200;
+            margin-top: 110px;
+        }
+        #prof-clubs {
+            float: left;
+            position: relative;
+            margin: 0 30px;
+            h1 {
+                color: #ccc;
+                line-height: 1.5em;
+                border-bottom: 1px solid black;
+            }
+            #student-clubs {
+                margin-top: 10px;
+                a {
+                    float: left;
+                    width: 100%;
+                    line-height: 1.4em;
+                    color: #fff;
+                }
             }
         }
     }
