--- a/app/css/stylesheets/main.css
+++ b/app/css/stylesheets/main.css
@@ -71,8 +71,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
   background-color: rgba(255, 255, 255, 0.2);
 }
-/* line 9, ../sass/_sidebar.scss */
+/* line 8, ../sass/_sidebar.scss */
+#sidebar #profile {
+  position: relative;
+}
+/* line 10, ../sass/_sidebar.scss */
 #sidebar #profile #profpic {
+  float: left;
   margin: 30px;
   width: 150px;
   height: 150px;
@@ -84,9 +89,41 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-transition: border 0.3s ease-in-out;
   transition: border 0.3s ease-in-out;
 }
-/* line 17, ../sass/_sidebar.scss */
+/* line 19, ../sass/_sidebar.scss */
 #sidebar #profile #profpic:hover {
   border: 1px solid #7572b6;
+}
+/* line 23, ../sass/_sidebar.scss */
+#sidebar #profile #about {
+  float: left;
+  font-size: 1.3em;
+  line-height: 1.6em;
+  color: #fff;
+  font-weight: 200;
+  margin-top: 110px;
+}
+/* line 31, ../sass/_sidebar.scss */
+#sidebar #profile #prof-clubs {
+  float: left;
+  position: relative;
+  margin: 0 30px;
+}
+/* line 35, ../sass/_sidebar.scss */
+#sidebar #profile #prof-clubs h1 {
+  color: #ccc;
+  line-height: 1.5em;
+  border-bottom: 1px solid black;
+}
+/* line 40, ../sass/_sidebar.scss */
+#sidebar #profile #prof-clubs #student-clubs {
+  margin-top: 10px;
+}
+/* line 42, ../sass/_sidebar.scss */
+#sidebar #profile #prof-clubs #student-clubs a {
+  float: left;
+  width: 100%;
+  line-height: 1.4em;
+  color: #fff;
 }
 
 /* line 1, ../sass/_feed.scss */
@@ -163,14 +200,15 @@ body {
 /* line 16, ../sass/main.scss */
 a {
   text-decoration: none;
+  color: #000;
 }
 
-/* line 20, ../sass/main.scss */
+/* line 21, ../sass/main.scss */
 h1 {
   font-size: 2em;
 }
 
-/* line 24, ../sass/main.scss */
+/* line 25, ../sass/main.scss */
 header {
   width: 100%;
   top: 0;
@@ -181,14 +219,14 @@ header {
   box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.4);
   z-index: 10;
 }
-/* line 33, ../sass/main.scss */
+/* line 34, ../sass/main.scss */
 header h1 {
   margin: 15px;
   color: #444;
   float: left;
   margin-left: 2.5%;
 }
-/* line 39, ../sass/main.scss */
+/* line 40, ../sass/main.scss */
 header #searchbar {
   -moz-transition: border, box-shadow 0.3s ease-in-out;
   -o-transition: border, box-shadow 0.3s ease-in-out;
@@ -210,26 +248,26 @@ header #searchbar {
   line-height: 2.1em;
   outline: none;
 }
-/* line 56, ../sass/main.scss */
+/* line 57, ../sass/main.scss */
 header #searchbar:focus {
   border: 2px solid #7572b6;
   box-shadow: 0 0 0.4em #7572b6;
 }
 
-/* line 63, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 #modal {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.5);
   z-index: 99;
 }
-/* line 68, ../sass/main.scss */
+/* line 69, ../sass/main.scss */
 #modal #modal-content {
   width: 300px;
   height: 300px;
 }
 
-/* line 74, ../sass/main.scss */
+/* line 75, ../sass/main.scss */
 #new-event {
   background-color: rgba(255, 255, 255, 0.4);
   margin: 0 auto;
