--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -11,11 +11,18 @@ html(lang="en")
     div#sidebar
         div#profile
             img#profpic(src='../images/profile-picture.jpg')
-            ul#about
-                li George Brown
-                li Class of 2015
-            h1 Your Clubs
-            ul#student-clubs
+            div#about
+                div Jorge Cafe
+                div Class of 2015
+            div#prof-clubs
+                h1 Your Clubs
+                div#student-clubs
+                    a(href='/clubs/ClubBaseball') Club Baseball
+                    a(href='/clubs/TheMingChow') The Ming Chow Fan Club
+                    a(href='/clubs/SynchronizedSwim') Tufts Asynchronized Swimming
+                    a(href='/clubs/Sarabande') Sarabande
+                    a(href='/clubs/CheeseClub') Cheese Club
+                a(href='/listclubs') Browse All Clubs
             a(href="/clubs" alt="Browse All Clubs") Browse all clubs
         div#calendar
     ul#feed
