--- a/app/css/sass/main.scss
+++ b/app/css/sass/main.scss
@@ -51,7 +51,7 @@ header {
         position: relative;
         text-indent: 20px;
         vertical-align: center;
-        color: #444;
+        color: #efefef;
         line-height: 2.1em;
         outline: none;
         &:focus {
