--- a/app/views/eventform.jade
+++ b/app/views/eventform.jade
@@ -15,7 +15,8 @@ html(lang="en")
 
   body
     header
-        a(href='/') Tufts Clubs
+        a(href='/') 
+            h1 Tufts Clubs
         div#searchbar(contenteditable="true") Search
     div#new-event
       h3 Tell us about your event!
