--- a/app/css/sass/main.scss
+++ b/app/css/sass/main.scss
@@ -75,8 +75,11 @@ header {
 #new-event {
     background-color: rgba(255,255,255,0.4);
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 120px;
     padding: 30px;
     border-radius: 10px;
     width: 60%;
+    h2 {
+        font-size: 1.3em;
+    }
 }
