--- a/app/css/stylesheets/main.css
+++ b/app/css/stylesheets/main.css
@@ -290,8 +290,12 @@ header #searchbar:focus {
 #new-event {
   background-color: rgba(255, 255, 255, 0.4);
   margin: 0 auto;
-  margin-top: 100px;
+  margin-top: 120px;
   padding: 30px;
   border-radius: 10px;
   width: 60%;
+}
+/* line 82, ../sass/main.scss */
+#new-event h2 {
+  font-size: 1.3em;
 }
