--- a/app/css/sass/_sidebar.scss
+++ b/app/css/sass/_sidebar.scss
@@ -5,6 +5,20 @@
     display: block;
     background-color: rgba(255, 255, 255, 0.2);
 
+    button {
+        cursor: pointer;
+        font-size: 14px;
+        position: relative;
+        height: 2.5em;
+        border-radius: 3px;
+        background-color: #efefef;
+        border: 1px solid #efefef;
+        width: 200px;
+        color: white;
+        margin: 0 auto;
+        text-align: center;
+    }
+
     #profile {
         position: relative;
         #profpic {
