--- a/app/css/sass/main.scss
+++ b/app/css/sass/main.scss
@@ -81,5 +81,7 @@ header {
     width: 60%;
     h2 {
         font-size: 1.3em;
+        line-height: 1.8em;
+        border-bottom: 1px solid black;
     }
 }
