--- a/app/css/stylesheets/main.css
+++ b/app/css/stylesheets/main.css
@@ -191,8 +191,9 @@ ul li .event-name {
 form {
   line-height: 14px;
   text-decoration: none;
+  margin-top: 20px;
 }
-/* line 3, ../sass/_form.scss */
+/* line 5, ../sass/_form.scss */
 form input, form textarea {
   font-size: 14px;
   border: none;
@@ -201,22 +202,56 @@ form input, form textarea {
   padding: 0;
   text-indent: 10px;
   height: 2.5em;
+  width: 100%;
+  margin-bottom: 10px;
 }
-/* line 12, ../sass/_form.scss */
+/* line 16, ../sass/_form.scss */
+form label {
+  width: 100%;
+  margin-top: 10px;
+  line-height: 1.5em;
+}
+/* line 21, ../sass/_form.scss */
 form input:focus, form textarea:focus {
   outline: none;
   border-color: black;
   box-shadow: 0 0 5px black;
 }
+/* line 26, ../sass/_form.scss */
+form textarea {
+  max-height: 100px;
+  height: 100px;
+}
+/* line 30, ../sass/_form.scss */
+form .full {
+  width: 100%;
+  float: left;
+}
+/* line 34, ../sass/_form.scss */
+form .half {
+  width: 50%;
+  float: left;
+}
+/* line 38, ../sass/_form.scss */
+form .forty {
+  width: 30%;
+  margin: 0 2.5%;
+  float: left;
+}
+/* line 43, ../sass/_form.scss */
+form .tiny {
+  width: 15%;
+  float: left;
+}
 
-/* line 19, ../sass/_form.scss */
+/* line 48, ../sass/_form.scss */
 button {
   cursor: pointer;
   font-size: 14px;
   position: relative;
   height: 2.5em;
   border-radius: 3px;
-  border: 1px solid black;
+  border: 1px solid #efefef;
   width: 200px;
 }
 
@@ -312,4 +347,6 @@ header #searchbar:focus {
 /* line 82, ../sass/main.scss */
 #new-event h2 {
   font-size: 1.3em;
+  line-height: 1.8em;
+  border-bottom: 1px solid black;
 }
