--- a/app/views/foodfinder.jade
+++ b/app/views/foodfinder.jade
@@ -4,7 +4,7 @@ html(lang="en")
     title Food Finder
     meta(name='viewport', content='initial-scale=1.0, user-scalable=no')
     meta(charset='utf-8')
-    link(rel='stylesheet', href='css/stylesheets/map.css')
+    link(rel='stylesheet', href='style.css', type='text/css')
     script(type='text/javascript', src='http://maps.googleapis.com/maps/api/js?sensor=true&libraries=places')
     script
       var myLat = 42.4069;
@@ -12,7 +12,7 @@ html(lang="en")
       var infoWindow = new google.maps.InfoWindow();
       var marker;
       var icon = {
-      url: "food_small.png"
+      url: "../images/icons/food_small.png"
       };
       var map;
       var request = new XMLHttpRequest();
@@ -45,6 +45,7 @@ html(lang="en")
       alert("Geolocation is not supported by your web browser.");
       }
       displayFoodMarkers();
+      findFoodAddresses();
       }
       function displayFoodMarkers()
       {
@@ -63,8 +64,36 @@ html(lang="en")
       infoWindow.open(map, this);
       });
       }
+      function findFoodAddresses()
+      {
+      var geocoder = new google.maps.Geocoder();
+      var eventName = "dowling";
+      geocoder.geocode({address:"419 Boston Ave, Medford, MA"}, function(result, status){
+      if (status == google.maps.GeocoderStatus.OK) {
+      console.log(result);
+      console.log(result[0].geometry);
+      LatLng = result[0].geometry.location;
+      marker = new google.maps.Marker({
+      map: map,
+      position: LatLng,
+      icon: icon,
+      infoText: eventName
+      });
+      marker.setClickable(true);
+      //info bubbles
+      google.maps.event.addListener(marker, 'click', function() {
+      infoWindow.close();
+      infoWindow.setContent(this.infoText);
+      infoWindow.open(map, this);
+      });
+      }
+      });
+      }
       google.maps.event.addDomListener(window, 'load', init);
   body
+    header
+      h1 Tufts Clubs
+      #searchbar(contenteditable='true') Search
     #map-canvas
     #distance-display
       h3 Character Tracker
