--- a/app/views/header.jade
+++ b/app/views/header.jade
@@ -1,3 +1,5 @@
 header
-    h1 Tufts Clubs
-    div#searchbar
+    a(href='/') 
+        h1 Tufts Clubs
+    div#searchbar(contenteditable="true") Search
+    a(id='foodfinder', href='/findfood') Find Free Food
