--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -4,10 +4,7 @@ html(lang="en")
     title= "tuftsclubs"
     link(rel='stylesheet', href='css/stylesheets/main.css')
   body
-    header
-        a(href='/') 
-            h1 Tufts Clubs
-        div#searchbar(contenteditable="true") Search
+    include header
     div#sidebar
         div#profile
             img#profpic(src='../images/profile-picture.jpg')
@@ -23,7 +20,8 @@ html(lang="en")
                     a(href='/clubs/Sarabande') Sarabande
                     a(href='/clubs/CheeseClub') Cheese Club
                     a(href="/clubs" alt="Browse All Clubs") Browse all clubs
-        button#findFood Find Free Food
+        div#findFood
+            button Find Free Food
     ul#feed
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js')
