--- a/app/views/listclubs.jade
+++ b/app/views/listclubs.jade
@@ -4,8 +4,5 @@ html(lang="en")
     title= "tuftsclubs"
     link(rel='stylesheet', href='css/stylesheets/main.css')
   body
-    header
-        a(href='/') 
-            h1 Tufts Clubs
-        div#searchbar(contenteditable="true") Search
+    include header
     ul#clubs
