correct foodfinder link direct

--- a/app/views/header.jade
+++ b/app/views/header.jade
@@ -2,4 +2,4 @@ header
     a(href='/') 
         h1 Tufts Clubs
     div#searchbar(contenteditable="true") Search
-    a(id='foodfinder', href='/findfood') Find Free Food
+    a(id='foodfinder', href='/foodfinder') Find Free Food
